# quickwit-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
charts/quickwit-mcp/: Chart.yaml  values.yaml
charts/quickwit-mcp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
scripts/: dev-quickwit.sh
src/quickwit_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  timeparse.py  trim.py
src/quickwit_mcp/tools/: __init__.py  help.py  indexes.py  search.py
tests/: test_client.py  test_config.py  test_server.py  test_timeparse.py  test_tool_aggregate_logs.py  test_tool_describe_index.py  test_tool_help.py  test_tool_list_indexes.py  test_tool_search_logs.py  test_trim.py  test_version.py
