[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickwit-mcp"
version = "0.0.1"
description = "Read-only MCP server exposing Quickwit log search & aggregations to LLM clients"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Vivek Agarwal" }]
keywords = ["mcp", "quickwit", "logs", "observability", "model-context-protocol"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: System :: Logging",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.2",
  "httpx>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/agarwalvivek29/quickwit-mcp"
Issues = "https://github.com/agarwalvivek29/quickwit-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/quickwit_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
